Replacing photos with contrasting ones. Adding a variable and styles to a width of 500. Fixed z-index on a modal window.

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -77,8 +77,8 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vh;
+	height: 100vh;
 
 	background-color: rgba(0,0,0,0.8);
 
@@ -128,6 +128,12 @@
 		display: block;
 	}
 
+}
+
+@media (min-width: @mobile-width-560){
+  .main-nav {
+    width: 480px;
+  } 
 }
 
 @media (min-width: @tablet-width) {
