--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -4,7 +4,7 @@
 	color: #000000;
 	background-color: #ffffff;
 	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
-	z-index: 99;
+	z-index: -1;
 	visibility: hidden;
 	opacity: 0;
 	transition: all .5s;
@@ -121,6 +121,7 @@
 	opacity: 1;
 	transition: all .5s;
   visibility: visible;
+  z-index: 99;
 }
 
 @media (min-width: @tablet-width) {
