--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -33,6 +33,13 @@
   text-align: center;
 }
 
+@media (min-width: @mobile-width-560){
+  .page-header__wrapper {
+    width: 480px;
+  } 
+}
+
+
 @media (min-width: @tablet-width) {
   .page-header {
     min-height: 177px;
