--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -140,6 +140,14 @@
 		text-align: center;
 }
 
+@media (min-width: @mobile-width-560){
+	.page-main__wrapper {
+		padding-left: 80px;
+		padding-right: 80px;
+	}
+}
+
+
 @media (min-width: @tablet-width) {  // ------------------------------------------------tablet
 	.page-main {
 		margin: 0;
@@ -149,6 +157,7 @@
 
 	.page-main__wrapper {
 		margin: 0 auto;
+		padding: 0;
 		padding-bottom: 135px;
 		width: 100%;
 		overflow-x: hidden;
@@ -493,7 +502,7 @@
 
 	.page-main__img img{
 		margin-top: -62px;
-		margin-left: 105px;
+		margin-left: 80px;
 		width: 594px;
 		height: auto;
 		vertical-align:bottom; 
